--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "phpmd/phpmd": "^2.7",
     "phpstan/phpstan": ">=0.10",
     "phpunit/phpunit": "^6.5 || ^7.4  || ^8.5",
-    "squizlabs/php_codesniffer": "*",
+    "squizlabs/php_codesniffer": "^3.5",
     "symfony/http-client": "^4.3",
     "vimeo/psalm": ">=3.0.16"
   },
